...
    <string name="addSwrlText">Search by title</string>
    <string name="item_done">Mark item as done</string>
    <string name="title_activity_view">ViewActivity</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="app_title">Swrl List</string>
    <string name="refresh_details">Refresh Details</string>
    <string name="mark_as_done">Mark As Done</string>
    <string name="searching">Searching…</string>
    <string name="no_search_results">No Search Results.</string>
    <string name="drawer_open">Menu Open</string>
    <string name="drawer_closed">Menu Closed</string>
    <string name="refresh">Refresh</string>
    <string name="Swrl_List">Swrl List</string>
...
    <string name="exampleTitle">Title</string>
    <string name="exampleText">text</string>
    <string name="profile_image">profile image</string>
    <string name="refresh_all_details">Refresh Details</string>
    <string name="sync_swrls_with_swrl_co">Sync Swrls with swrl.co</string>
    <string name="login_forgot_password">Forgot your password? Click here</string>
    <string name="reAdd">Mark As Later</string>
    <string name="add_swrl_users_or_email_addresses">Add Swrl Users or email addresses</string>
    <string name="why_would_your_friends_like_this_swrl">Why would your friends like this Swrl?</string>
    <string name="send_recommendation">Send Recommendation</string>
    <string name="action_search">Search</string>
    <string name="comment">Comment</string>
    <string name="leave_a_comment">Leave a comment</string>
...
