...
        android:imeOptions="actionSearch"
        android:inputType="textPersonName"
        android:nextFocusDown="@id/addItemEditText"
        android:paddingTop="@dimen/activity_vertical_margin" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/listView"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/footer"
        android:layout_below="@+id/addSwrlText"/>
...
